apps/staging/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radarr.christophervestman.com
      secretName: radarr-tls
  rules:
    - host: radarr.christophervestman.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr
                port: 
                  number: 7878
